[tool.poetry]
name = "exomiser-machine-learning"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
polars = "^1.14.0"
xgboost = "^2.1.2"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
nbimporter = "^0.3.4"
pyarrow = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
